updated to java 9, modified experiments towards YAML, simplified some